syntax = "proto3";
package side.gmm;

option go_package = "github.com/sideprotocol/side/x/gmm/types";
import "side/gmm/pool_params.proto"; 
import "side/gmm/pool_asset.proto"; 
import "gogoproto/gogo.proto"; 
import "cosmos/base/v1beta1/coin.proto";

message Pool {
  //option (cosmos_proto.implements_interface) = "PoolI";
  string pool_id = 1; 
  string sender = 2; 
  PoolParams poolParams = 3 [(gogoproto.nullable) = false]; 
  map<string, PoolAsset> assets = 4  [(gogoproto.nullable) = false]; 
  // sum of all LP tokens sent out
  cosmos.base.v1beta1.Coin total_shares = 5 [
    (gogoproto.moretags) = "yaml:\"total_shares\"",
    (gogoproto.nullable) = false
  ];
}

